--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,35 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
-    "target": "es5",
+    "noImplicitAny": false,
+    "jsx": "react-jsx",
+    "target": "ES2020",
+    "module": "esnext",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "sourceMap": true,
+    "baseUrl": ".",
+    "typeRoots": [
+      "@types",
+      "node_modules/@types"
+    ],
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
     "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "checkJs": false
   },
   "include": [
-    "src"
+    "src",
   ]
 }
