--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@apollo/react-hooks": "^4.0.0",
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/material-ui": "^0.21.9",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
